Gain: $ 0.37 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5
Gain: $ 0.4 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_RV
Gain: $ 0.37 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_IR5
Gain: $ -3.86 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_TR
Gain: $ 0.53 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_AV
Gain: $ -0.01 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_VI
Gain: $ 0.36 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_AL
Gain: $ -0.94 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_LI
Gain: $ 0.25 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_QP
Gain: $ 0.37 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_HM
Gain: $ 0.37 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_SS
Gain: $ 0.54 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_QL
Gain: $ 0.37 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_DB10
Gain: $ -0.36 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_TR_IR5
Gain: $ 0.25 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_TR_QP
Gain: $ 1.02 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_QP_IR5
Gain: $ 1.02 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_RV_TR_DB
Gain: $ 1.02 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_RV_AV
Gain: $ 0.4 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_RV_AL
Gain: $ -4.79 Win %: 0 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_RV_QP
Gain: $ 0.54 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_HM_TR
Gain: $ 0.53 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_HM_AV
Gain: $ 0.25 Win %: 100.00 in 1 days with algo TB3_PL_QM_OB2_OS2_CB5_CS5_HM_QP
Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV
Gain: $ 0.54 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_IR5
Gain: $ 0.54 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_TR
Gain: $ 0.92 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_AV
Gain: $ 0.88 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_VI
Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_AL
Gain: $ -2.67 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_LI
Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_QP
Gain: $ 1.04 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM
Gain: $ -2.93 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_SS
Gain: $ -1.49 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_QL
Gain: $ -0.42 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_DB30
Gain: $ -2.28 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_TR_IR5
Gain: $ 0.24 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_TR_QP
Gain: $ -1.64 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_QP_IR5
Gain: $ -1.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_TR
Gain: $ -0.42 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_TR_DB
Gain: $ 0.92 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_AV
Gain: $ -1.64 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_AL
Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_QP
Gain: $ -1.45 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_TR
Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_AV
Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_QP
Gain: $ 1.11 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV
Gain: $ -2.34 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_IR5
Gain: $ -0.89 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_TR
Gain: $ 0.51 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_AV
Gain: $ -0.35 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_VI
Gain: $ 0.53 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_AL
Gain: $ -1.28 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_LI
Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_QP
Gain: $ 1.11 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_HM
Gain: $ -1.21 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_SS
Gain: $ 1.11 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_QL
Gain: $ 1.11 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_DB6
Gain: $ -1.21 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_TR_IR5
Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_TR_QP
Gain: $ -2.82 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_QP_IR5
Gain: $ -0.89 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_TR
Gain: $ -0.86 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_TR_DB
Gain: $ 0.51 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_AV
Gain: $ 0.53 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_AL
Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_RV_QP
Gain: $ -0.89 Win %: 0 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_HM_TR
Gain: $ 0.51 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_HM_AV
Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB5_PL_QM_OB1_OS1_CB1_CS1_HM_QP
Gain: $ -2.95 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_RV
Gain: $ 2.12 Win %: 100.00 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_IR5
Gain: $ -2.24 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_TR
Gain: $ -1.4 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_AV
Gain: $ -1.35 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_VI
Gain: $ -1.84 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_AL
Gain: $ -1.96 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_LI
Gain: $ -4.57 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_QP
Gain: $ -3.82 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_HM
Gain: $ -1.6 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_SS
Gain: $ -0.58 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_QL
Gain: $ -3.44 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_DB6
Gain: $ 2.11 Win %: 100.00 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_TR_IR5
Gain: $ -3.22 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_TR_QP
Gain: $ 0.07 Win %: 100.00 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_QP_IR5
Gain: $ -2.16 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_RV_TR_DB
Gain: $ -1.38 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_RV_AV
Gain: $ -1.68 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_RV_AL
Gain: $ -4.08 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_RV_QP
Gain: $ -2.47 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_HM_TR
Gain: $ -0.81 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_HM_AV
Gain: $ -4.82 Win %: 0 in 1 days with algo TB5_EO_EC_QM_OB3_OS3_CB1_CS1_HM_QP
