ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5
ENTX Gain: $ 0.2 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_TR_QP_DB30
ENTX Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV_TR_DB30
ENTX Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV_AV_DB30
ENTX Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV_AL_DB30
ENTX Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV_QP_DB30
ENTX Gain: $ -0.54 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_HM_TR_DB30
ENTX Gain: $ -1.2 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_HM_AV_DB30
ENTX Gain: $ 0.22 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_HM_QP_DB30
ENTX Gain: $ -0.79 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_IT_QL_DB30
ENTX Gain: $ 0 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_IT_QP_DB30
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_TR_IR5
ENTX Gain: $ 0.22 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_TR_QP
ENTX Gain: $ 0.22 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_QP_IR5
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV_TR
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV_AV
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV_AL
ENTX Gain: $ 0.22 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV_QP
ENTX Gain: $ -0.06 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_HM_TR
ENTX Gain: $ -0.72 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_HM_AV
ENTX Gain: $ 0.22 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_HM_QP
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_IT_QL
ENTX Gain: $ 0.22 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_IT_QP
ENTX Gain: $ -0.76 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_AO_AC
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_RV
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_IR5
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_TR
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_AV
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_AL
ENTX Gain: $ -1.6 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_VI
ENTX Gain: $ -1.43 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_LI
ENTX Gain: $ 0.22 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_QP
ENTX Gain: $ -0.06 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_HM
ENTX Gain: $ -1.21 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_SS
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_QL
ENTX Gain: $ -0.54 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_DB30
ENTX Gain: $ -1.17 Win %: 0 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_AO
ENTX Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_AC
ENTX Gain: $ 1.32 Win %: 100.00 in 1 days with algo TB1_HL_HI_QM_OB4_OS4_CB5_CS5_IT
ENTX Gain: $ -4.17 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_TR_QP_DB30
ENTX Gain: $ -2.2 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV_TR_DB30
ENTX Gain: $ -0.47 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV_AV_DB30
ENTX Gain: $ -2.03 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV_AL_DB30
ENTX Gain: $ -7.55 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV_QP_DB30
ENTX Gain: $ -2.2 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_HM_TR_DB30
ENTX Gain: $ -0.18 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_HM_AV_DB30
ENTX Gain: $ -7.55 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_HM_QP_DB30
ENTX Gain: $ -0.37 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_IT_QL_DB30
ENTX Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_IT_QP_DB30
ENTX Gain: $ -1.73 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_TR_IR5
ENTX Gain: $ 0.24 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_TR_QP
ENTX Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_QP_IR5
ENTX Gain: $ -0.9 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV_TR
ENTX Gain: $ 0.92 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV_AV
ENTX Gain: $ 1.12 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV_AL
ENTX Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV_QP
ENTX Gain: $ -1.31 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_HM_TR
ENTX Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_HM_AV
ENTX Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_HM_QP
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_IT_QL
ENTX Gain: $ 0.04 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_IT_QP
ENTX Gain: $ -191.75 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_AO_AC
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_RV
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_IR5
ENTX Gain: $ -0.9 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_TR
ENTX Gain: $ 0.92 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_AV
ENTX Gain: $ 1.12 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_AL
ENTX Gain: $ 0.88 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_VI
ENTX Gain: $ 1.12 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_LI
ENTX Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_QP
ENTX Gain: $ 1.04 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_HM
ENTX Gain: $ -1.66 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_SS
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_QL
ENTX Gain: $ -3.25 Win %: 0 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_DB30
ENTX Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_AO
ENTX Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_AC
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB5_OS5_CB5_CS5_IT
ENTX Gain: $ -4.32 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_TR_QP_DB30
ENTX Gain: $ -2.28 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_TR_DB30
ENTX Gain: $ -0.41 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_AV_DB30
ENTX Gain: $ -1.97 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_AL_DB30
ENTX Gain: $ -7.56 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_QP_DB30
ENTX Gain: $ -2.28 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_TR_DB30
ENTX Gain: $ -0.12 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_AV_DB30
ENTX Gain: $ -7.56 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_QP_DB30
ENTX Gain: $ -0.31 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_IT_QL_DB30
ENTX Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_IT_QP_DB30
ENTX Gain: $ -1.73 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_TR_IR5
ENTX Gain: $ 0.24 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_TR_QP
ENTX Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_QP_IR5
ENTX Gain: $ -1.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_TR
ENTX Gain: $ 0.92 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_AV
ENTX Gain: $ 1.12 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_AL
ENTX Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV_QP
ENTX Gain: $ -1.45 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_TR
ENTX Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_AV
ENTX Gain: $ 0.35 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM_QP
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_IT_QL
ENTX Gain: $ 0.04 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_IT_QP
ENTX Gain: $ -191.75 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_AO_AC
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_RV
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_IR5
ENTX Gain: $ -1.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_TR
ENTX Gain: $ 0.92 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_AV
ENTX Gain: $ 1.12 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_AL
ENTX Gain: $ 0.88 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_VI
ENTX Gain: $ 1.12 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_LI
ENTX Gain: $ 0.38 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_QP
ENTX Gain: $ 1.04 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_HM
ENTX Gain: $ -1.57 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_SS
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_QL
ENTX Gain: $ -3.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_DB30
ENTX Gain: $ 0.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_AO
ENTX Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_AC
ENTX Gain: $ 1.25 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB5_CS5_IT
ENTX Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_TR_QP_DB15
ENTX Gain: $ -1.11 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV_TR_DB15
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV_AV_DB15
ENTX Gain: $ 0.46 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV_AL_DB15
ENTX Gain: $ -1.66 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV_QP_DB15
ENTX Gain: $ -1.24 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_HM_TR_DB15
ENTX Gain: $ -2.15 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_HM_AV_DB15
ENTX Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_HM_QP_DB15
ENTX Gain: $ -0.78 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_IT_QL_DB15
ENTX Gain: $ -0.01 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_IT_QP_DB15
ENTX Gain: $ 0.73 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_TR_IR4
ENTX Gain: $ 0.28 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_TR_QP
ENTX Gain: $ -4.3 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_QP_IR4
ENTX Gain: $ 0.73 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV_TR
ENTX Gain: $ 1.53 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV_AV
ENTX Gain: $ 1.55 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV_AL
ENTX Gain: $ -3.12 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV_QP
ENTX Gain: $ 1.37 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_HM_TR
ENTX Gain: $ 1.37 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_HM_AV
ENTX Gain: $ -3.84 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_HM_QP
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_IT_QL
ENTX Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_IT_QP
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_AO_AC
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_RV
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_IR4
ENTX Gain: $ 0.73 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_TR
ENTX Gain: $ 1.53 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_AV
ENTX Gain: $ 1.55 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_AL
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_VI
ENTX Gain: $ 1.27 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_LI
ENTX Gain: $ -3.58 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_QP
ENTX Gain: $ 1.37 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_HM
ENTX Gain: $ -2.61 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_SS
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_QL
ENTX Gain: $ -1.91 Win %: 0 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_DB15
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_AO
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_AC
ENTX Gain: $ 1.24 Win %: 100.00 in 1 days with algo TB2_CC_QM_OB2_OS2_CB4_CS4_IT
