FCEL Gain: $ 10.58 Win %: 60.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5
FCEL Gain: $ -6.6 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP_DB15
FCEL Gain: $ 10.14 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR_DB15
FCEL Gain: $ 7.8 Win %: 48.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV_DB15
FCEL Gain: $ 6.52 Win %: 54.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL_DB15
FCEL Gain: $ -19.42 Win %: 47.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP_DB15
FCEL Gain: $ 11.16 Win %: 52.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR_DB15
FCEL Gain: $ 8.84 Win %: 51.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV_DB15
FCEL Gain: $ -12.82 Win %: 53.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP_DB15
FCEL Gain: $ 8.19 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL_DB15
FCEL Gain: $ -10.18 Win %: 53.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP_DB15
FCEL Gain: $ 9.09 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_IR4
FCEL Gain: $ 10.88 Win %: 70.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_TS
FCEL Gain: $ -7.99 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP
FCEL Gain: $ -3.6 Win %: 60.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP_IR4
FCEL Gain: $ 10.49 Win %: 59.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR
FCEL Gain: $ 9.03 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV
FCEL Gain: $ 2.34 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL
FCEL Gain: $ -14.42 Win %: 50.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP
FCEL Gain: $ 9.74 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR
FCEL Gain: $ -4.31 Win %: 52.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV
FCEL Gain: $ -2.84 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AL
FCEL Gain: $ -8.95 Win %: 53.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP
FCEL Gain: $ 8.0 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL
FCEL Gain: $ -3.17 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP
FCEL Gain: $ 8.24 Win %: 69.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_TS
FCEL Gain: $ -12.87 Win %: 53.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AO_AC
FCEL Gain: $ -13.38 Win %: 68.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP_PM
FCEL Gain: $ 9.16 Win %: 71.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AV_TS
FCEL Gain: $ 6.94 Win %: 70.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AL_TS
FCEL Gain: $ 5.13 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV
FCEL Gain: $ 6.94 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IR4
FCEL Gain: $ 11.58 Win %: 60.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR
FCEL Gain: $ 9.03 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AV
FCEL Gain: $ 4.63 Win %: 58.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AL
FCEL Gain: $ 4.59 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_VI
FCEL Gain: $ 0.35 Win %: 54.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_LI
FCEL Gain: $ -3.17 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP
FCEL Gain: $ 3.84 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM
FCEL Gain: $ 6.07 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_SS
FCEL Gain: $ 6.84 Win %: 52.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QL
FCEL Gain: $ 14.11 Win %: 52.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_DB15
FCEL Gain: $ 4.02 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AO
FCEL Gain: $ -0.11 Win %: 58.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AC
FCEL Gain: $ 11.42 Win %: 63.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT
FCEL Gain: $ -3.44 Win %: 54.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_PM
FCEL Gain: $ 10.33 Win %: 70.00 in 131 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TS
FCEL Gain: $ -19.48 Win %: 45.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TR_QP_DB6
FCEL Gain: $ 5.96 Win %: 52.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_TR_DB6
FCEL Gain: $ 17.15 Win %: 55.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_AV_DB6
FCEL Gain: $ 7.48 Win %: 53.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_AL_DB6
FCEL Gain: $ -25.09 Win %: 43.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_QP_DB6
FCEL Gain: $ 7.02 Win %: 56.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_TR_DB6
FCEL Gain: $ 14.6 Win %: 54.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_AV_DB6
FCEL Gain: $ -24.41 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_QP_DB6
FCEL Gain: $ 3.71 Win %: 48.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_QL_DB6
FCEL Gain: $ -24.65 Win %: 42.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_QP_DB6
FCEL Gain: $ 5.38 Win %: 52.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TR_IR1
FCEL Gain: $ 0.59 Win %: 60.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TR_TS
FCEL Gain: $ -19.38 Win %: 46.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TR_QP
FCEL Gain: $ -25.4 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_QP_IR1
FCEL Gain: $ 8.34 Win %: 51.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_TR
FCEL Gain: $ 20.19 Win %: 60.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_AV
FCEL Gain: $ 6.66 Win %: 48.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_AL
FCEL Gain: $ -28.03 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV_QP
FCEL Gain: $ 8.99 Win %: 54.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_TR
FCEL Gain: $ 19.09 Win %: 56.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_AV
FCEL Gain: $ 4.91 Win %: 49.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_AL
FCEL Gain: $ -26.3 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM_QP
FCEL Gain: $ 3.34 Win %: 50.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_QL
FCEL Gain: $ -26.89 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_QP
FCEL Gain: $ 0.05 Win %: 61.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT_TS
FCEL Gain: $ -1310.72 Win %: 9.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_AO_AC
FCEL Gain: $ -5.06 Win %: 54.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_QP_PM
FCEL Gain: $ 3.25 Win %: 63.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_AV_TS
FCEL Gain: $ 1.07 Win %: 58.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_AL_TS
FCEL Gain: $ 8.29 Win %: 56.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_RV
FCEL Gain: $ 7.89 Win %: 52.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IR1
FCEL Gain: $ 7.3 Win %: 52.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TR
FCEL Gain: $ 20.1 Win %: 60.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_AV
FCEL Gain: $ 6.26 Win %: 50.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_AL
FCEL Gain: $ 2.92 Win %: 43.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_VI
FCEL Gain: $ 4.63 Win %: 51.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_LI
FCEL Gain: $ -26.89 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_QP
FCEL Gain: $ 7.92 Win %: 52.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_HM
FCEL Gain: $ 12.69 Win %: 55.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_SS
FCEL Gain: $ 3.65 Win %: 44.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_QL
FCEL Gain: $ 7.46 Win %: 50.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_DB6
FCEL Gain: $ 7.04 Win %: 54.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_AO
FCEL Gain: $ -315.64 Win %: 13.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_AC
FCEL Gain: $ 4.82 Win %: 57.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_IT
FCEL Gain: $ 6.02 Win %: 48.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_PM
FCEL Gain: $ 0.39 Win %: 59.00 in 131 days with algo TB5_HL_QM_OB2_OS2_CB5_CS5_TS
FCEL Gain: $ -6.53 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
FCEL Gain: $ 10.14 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
FCEL Gain: $ 7.8 Win %: 48.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
FCEL Gain: $ 6.52 Win %: 54.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
FCEL Gain: $ -19.42 Win %: 47.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
FCEL Gain: $ 11.16 Win %: 52.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
FCEL Gain: $ 8.84 Win %: 51.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
FCEL Gain: $ -12.82 Win %: 53.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
FCEL Gain: $ 7.85 Win %: 54.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
FCEL Gain: $ -10.31 Win %: 53.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
FCEL Gain: $ 8.8 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR4
FCEL Gain: $ 10.88 Win %: 70.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_TS
FCEL Gain: $ -7.99 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
FCEL Gain: $ -3.6 Win %: 60.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR4
FCEL Gain: $ 10.55 Win %: 59.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
FCEL Gain: $ 9.03 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
FCEL Gain: $ 2.34 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
FCEL Gain: $ -14.42 Win %: 50.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
FCEL Gain: $ 9.74 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
FCEL Gain: $ -4.31 Win %: 52.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
FCEL Gain: $ -2.84 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AL
FCEL Gain: $ -8.95 Win %: 53.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
FCEL Gain: $ 8.0 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL
FCEL Gain: $ -3.17 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP
FCEL Gain: $ 8.24 Win %: 69.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_TS
FCEL Gain: $ -12.87 Win %: 53.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AO_AC
FCEL Gain: $ -13.38 Win %: 68.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP_PM
FCEL Gain: $ 9.16 Win %: 71.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AV_TS
FCEL Gain: $ 6.94 Win %: 70.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AL_TS
FCEL Gain: $ 5.13 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV
FCEL Gain: $ 6.94 Win %: 56.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IR4
FCEL Gain: $ 11.58 Win %: 60.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR
FCEL Gain: $ 9.03 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AV
FCEL Gain: $ 4.63 Win %: 58.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AL
FCEL Gain: $ 4.59 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_VI
FCEL Gain: $ 0.35 Win %: 54.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_LI
FCEL Gain: $ -3.17 Win %: 55.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP
FCEL Gain: $ 3.84 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM
FCEL Gain: $ 6.07 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_SS
FCEL Gain: $ 6.84 Win %: 52.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QL
FCEL Gain: $ 14.11 Win %: 52.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_DB15
FCEL Gain: $ 4.02 Win %: 57.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AO
FCEL Gain: $ -0.11 Win %: 58.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AC
FCEL Gain: $ 11.42 Win %: 63.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT
FCEL Gain: $ -3.44 Win %: 54.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_PM
FCEL Gain: $ 10.33 Win %: 70.00 in 131 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TS
FCEL Gain: $ -18.82 Win %: 45.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
FCEL Gain: $ 6.53 Win %: 53.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
FCEL Gain: $ 20.67 Win %: 54.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
FCEL Gain: $ 7.17 Win %: 51.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
FCEL Gain: $ -25.03 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
FCEL Gain: $ 9.07 Win %: 57.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
FCEL Gain: $ 16.86 Win %: 53.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
FCEL Gain: $ -25.43 Win %: 39.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
FCEL Gain: $ 1.65 Win %: 48.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
FCEL Gain: $ -24.88 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
FCEL Gain: $ 6.51 Win %: 54.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_IR1
FCEL Gain: $ 1.97 Win %: 64.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_TS
FCEL Gain: $ -19.63 Win %: 45.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP
FCEL Gain: $ -27.64 Win %: 40.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP_IR1
FCEL Gain: $ 8.62 Win %: 54.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR
FCEL Gain: $ 21.29 Win %: 58.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV
FCEL Gain: $ 7.73 Win %: 51.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL
FCEL Gain: $ -26.43 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP
FCEL Gain: $ 10.7 Win %: 57.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR
FCEL Gain: $ 18.04 Win %: 53.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV
FCEL Gain: $ 5.97 Win %: 50.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AL
FCEL Gain: $ -28.56 Win %: 37.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP
FCEL Gain: $ 0.8 Win %: 48.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL
FCEL Gain: $ -26.92 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP
FCEL Gain: $ 0.88 Win %: 62.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_TS
FCEL Gain: $ -1410.21 Win %: 9.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO_AC
FCEL Gain: $ -1.19 Win %: 58.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP_PM
FCEL Gain: $ 5.45 Win %: 64.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AV_TS
FCEL Gain: $ 0.9 Win %: 59.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AL_TS
FCEL Gain: $ 9.14 Win %: 57.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV
FCEL Gain: $ 6.88 Win %: 53.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IR1
FCEL Gain: $ 8.27 Win %: 55.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR
FCEL Gain: $ 21.19 Win %: 58.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AV
FCEL Gain: $ 7.54 Win %: 51.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AL
FCEL Gain: $ 3.62 Win %: 44.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_VI
FCEL Gain: $ 4.0 Win %: 53.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_LI
FCEL Gain: $ -26.92 Win %: 41.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP
FCEL Gain: $ 7.81 Win %: 51.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM
FCEL Gain: $ 13.56 Win %: 58.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_SS
FCEL Gain: $ 4.24 Win %: 44.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QL
FCEL Gain: $ 7.16 Win %: 51.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_DB6
FCEL Gain: $ 4.92 Win %: 53.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO
FCEL Gain: $ -82.04 Win %: 25.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AC
FCEL Gain: $ 4.26 Win %: 57.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT
FCEL Gain: $ 7.5 Win %: 51.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_PM
FCEL Gain: $ 1.25 Win %: 62.00 in 131 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TS
FCEL Gain: $ -4.2 Win %: 53.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_TR_QP_DB15
FCEL Gain: $ 19.31 Win %: 54.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV_TR_DB15
FCEL Gain: $ 11.76 Win %: 53.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV_AV_DB15
FCEL Gain: $ 8.76 Win %: 56.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV_AL_DB15
FCEL Gain: $ -18.49 Win %: 43.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV_QP_DB15
FCEL Gain: $ 24.06 Win %: 59.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_HM_TR_DB15
FCEL Gain: $ 11.37 Win %: 51.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_HM_AV_DB15
FCEL Gain: $ -10.93 Win %: 48.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_HM_QP_DB15
FCEL Gain: $ 9.94 Win %: 56.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_IT_QL_DB15
FCEL Gain: $ -10.08 Win %: 51.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_IT_QP_DB15
FCEL Gain: $ 20.43 Win %: 58.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_TR_IR4
FCEL Gain: $ 3.19 Win %: 67.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_TR_TS
FCEL Gain: $ -10.57 Win %: 54.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_TR_QP
FCEL Gain: $ -12.72 Win %: 45.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_QP_IR4
FCEL Gain: $ 11.35 Win %: 60.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV_TR
FCEL Gain: $ 4.13 Win %: 52.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV_AV
FCEL Gain: $ 2.99 Win %: 56.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV_AL
FCEL Gain: $ -20.41 Win %: 50.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV_QP
FCEL Gain: $ 13.17 Win %: 59.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_HM_TR
FCEL Gain: $ -0.5 Win %: 53.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_HM_AV
FCEL Gain: $ 4.17 Win %: 59.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_HM_AL
FCEL Gain: $ -21.56 Win %: 47.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_HM_QP
FCEL Gain: $ -0.29 Win %: 52.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_IT_QL
FCEL Gain: $ -20.23 Win %: 49.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_IT_QP
FCEL Gain: $ -3.56 Win %: 63.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_IT_TS
FCEL Gain: $ 2.94 Win %: 54.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_AO_AC
FCEL Gain: $ -14.21 Win %: 51.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_QP_PM
FCEL Gain: $ -4.79 Win %: 65.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_AV_TS
FCEL Gain: $ 3.18 Win %: 69.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_AL_TS
FCEL Gain: $ -5.67 Win %: 54.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_RV
FCEL Gain: $ -0.07 Win %: 46.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_IR4
FCEL Gain: $ 15.85 Win %: 58.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_TR
FCEL Gain: $ 4.89 Win %: 53.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_AV
FCEL Gain: $ 5.23 Win %: 56.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_AL
FCEL Gain: $ 6.64 Win %: 51.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_VI
FCEL Gain: $ 1.26 Win %: 55.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_LI
FCEL Gain: $ -20.23 Win %: 49.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_QP
FCEL Gain: $ -0.86 Win %: 52.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_HM
FCEL Gain: $ 3.22 Win %: 54.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_SS
FCEL Gain: $ 5.73 Win %: 49.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_QL
FCEL Gain: $ 15.26 Win %: 57.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_DB15
FCEL Gain: $ 2.94 Win %: 54.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_AO
FCEL Gain: $ 2.94 Win %: 54.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_AC
FCEL Gain: $ -5.04 Win %: 55.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_IT
FCEL Gain: $ -1.08 Win %: 52.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_PM
FCEL Gain: $ -2.72 Win %: 64.00 in 131 days with algo TB2_OO_QM_OB4_OS4_CB5_CS5_TS
